# hobby-lang-rs

./: .gitignore  Cargo.toml  LICENSE_MIT  Makefile  README.md  run.ts
.github/workflows/: cache-cargo.yaml  test.yaml
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/wasm/: Cargo.toml  Makefile  run.ts  run_wasm.test.ts
crates/wasm/src/: lib.rs
crates/wasm/tests/: web.rs
src/: lib.rs
