[package]
name = "mizl-wasm"
version = "0.1.0"
authors = ["mizchi <miz404@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
mizl_parser = { path = "../parser" }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"

